[package]
name = "sketch_assist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version = "0.5", default-features = false}
bevy_rapier2d = { version="0.11.0", features = ["wasm-bindgen"] }
bevy_webgl2 = {version="0.5.0", optional=true}
winit = {version = "0.24.0"}
itertools = "0.10.1"
