[package]
name = "sketch_assist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
anyhow = "1.0.48"
bevy = {version = "0.5", default-features = false}
bevy_webgl2 = {version="0.5.0", optional=true}
#winit = {version = "0.24.0"}
#itertools = "0.10.1"
image = "0.23.14"
# tract-onnx = "0.15.5"
tract-onnx = { git = "https://github.com/toomuat/tract" }
wasm-bindgen = "0.2.69"
